# Soy

./: .gitignore  CMakeLists.txt  COPYING  README.md
benchmarks/: N25_h0.05_seed1.mps  N30_h0.05_seed1.mps
src/: CMakeLists.txt
src/common/: CMakeLists.txt  Color.h  CommonError.h  ConstSimpleData.cpp  ConstSimpleData.h  Debug.h  Error.cpp  Error.h  File.cpp  File.h  FloatUtils.cpp  FloatUtils.h  GetCPUData.h  HashMap.h  HashSet.h  HeapData.cpp  HeapData.h  IFile.cpp  IFile.h  LinearExpression.cpp  LinearExpression.h  List.h  MString.cpp  MString.h  MStringf.h  Map.h  Pair.h  Queue.h  Set.h  SignalHandler.cpp  SignalHandler.h  Stack.h  Statistics.cpp  Statistics.h  TimeUtils.cpp  TimeUtils.h  Vector.h
src/common/T/: Errno.h  FileFactory.h  stdlib.h  unistd.h
src/common/T/sys/: stat.h
src/common/mock/: CommonMock.cpp  Errno.cpp  FileFactory.cpp
src/common/real/: CMakeLists.txt  CommonReal.cpp  Errno.cpp  FileFactory.cpp
src/common/tests/: MockErrno.h  MockFile.h  MockFileFactory.h  RealMalloc.h  Test_BoundManager.h  Test_ConstSimpleData.h  Test_Error.h  Test_File.h  Test_FloatUtils.h  Test_HashMap.h  Test_HashSet.h  Test_HeapData.h  Test_LinearExpression.h  Test_List.h  Test_MString.h  Test_MStringf.h  Test_Map.h  Test_Pair.h  Test_Queue.h  Test_Set.h  Test_Stack.h  Test_Vector.h
src/configuration/: CMakeLists.txt  ConfigurationError.h  GlobalConfiguration.cpp  GlobalConfiguration.h  OptionParser.cpp  OptionParser.h  Options.cpp  Options.h
src/constraints/: AbsoluteValueConstraint.cpp  AbsoluteValueConstraint.h  CMakeLists.txt  DisjunctionConstraint.cpp  DisjunctionConstraint.h  IntegerConstraint.cpp  IntegerConstraint.h  MockConstraint.h  OneHotConstraint.cpp  OneHotConstraint.h  PLConstraint.h  PiecewiseLinearFunctionType.h
src/constraints/tests/: Test_AbsoluteValueConstraint.h  Test_DisjunctionConstraint.h  Test_IntegerConstraint.h  Test_OneHotConstraint.h  Test_PLConstraint.h
src/engine/: AssignmentManager.cpp  AssignmentManager.h  BoundManager.cpp  BoundManager.h  CMakeLists.txt  CadicalWrapper.cpp  CadicalWrapper.h  Conflict.h  DivideStrategy.h  Engine.cpp  Engine.h  Equation.cpp  Equation.h  GurobiWrapper.cpp  GurobiWrapper.h  InfeasibleQueryException.h  InputQuery.cpp  InputQuery.h  LocalSearchPlateauException.h  MILPEncoder.cpp  MILPEncoder.h  MockEngine.h  PiecewiseLinearCaseSplit.cpp  PiecewiseLinearCaseSplit.h  Preprocessor.cpp  Preprocessor.h  SmtCore.cpp  SmtCore.h  Soy.cpp  Soy.h  SoyError.h  SubQuery.h  Tightening.h  TrailEntry.h  Watcher.h  main.cpp
src/engine/tests/: Test_Engine.h  Test_GurobiWrapper.h  Test_InputQuery.h  Test_MILPEncoder.h  Test_SatSolver.h  Test_SmtCore.h
src/input_parsers/: CMakeLists.txt  InputParserError.h  MpsParser.cpp  MpsParser.h
src/input_parsers/mps_example/: main.cpp
src/local_search/: CMakeLists.txt  PLConstraintScoreTracker.cpp  PLConstraintScoreTracker.h  PseudoImpactTracker.cpp  PseudoImpactTracker.h  SoIInitializationStrategy.h  SoIManager.cpp  SoIManager.h  SoISearchStrategy.h
src/local_search/tests/: Test_PseudoImpactTracker.h  Test_SoIManager.h
src/parallelization/: CMakeLists.txt  DnCManager.cpp  DnCManager.h  DnCWorker.cpp  DnCWorker.h
src/tightening/: CMakeLists.txt  LPBasedTightener.cpp  LPBasedTightener.h
tools/: download_cadical.sh
tools/cxxtest/: CMakeLists.txt
